--- a/views/admin/pages/account/garbage.view.ejs
+++ b/views/admin/pages/account/garbage.view.ejs
@@ -35,8 +35,8 @@
             <div class="container-fluid mb-2">
               <div class="row">
                 <div class="col-lg-5 col-12">
-                  <%-include("../../partials/changeMulti.view.ejs", {url: 'accounts', type:
-                  'account'}) %>
+                  <%-include("../../partials/changeMulti.view.ejs", { statusList: statusList, url:
+                  'accounts', type: 'account' }) %>
                 </div>
               </div>
             </div>
