--- a/views/admin/pages/category/create.view.ejs
+++ b/views/admin/pages/category/create.view.ejs
@@ -30,7 +30,7 @@
         if(roleAuth.permission.includes('category-add')) { %>
         <h1 class="heading-font text-primary py-0 text-start"><%= pageTitle %></h1>
         <form
-          action="<%= prefixAdmin %>/categories/create"
+          action="<%= prefixAdmin %>/product-categories/create"
           method="POST"
           enctype="multipart/form-data"
           id="form-handle"
