--- a/views/admin/pages/product/garbage.view.ejs
+++ b/views/admin/pages/product/garbage.view.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%-include("../../partials/seoMeta.view.ejs", { pageTitle: pageTitle}) %>
-    
+
     <!-- Style Library & Framework -->
     <link
       rel="stylesheet"
@@ -35,8 +35,8 @@
             <div class="container-fluid mb-2">
               <div class="row">
                 <div class="col-lg-5 col-12">
-                  <%-include("../../partials/changeMulti.view.ejs", {url: 'products', type:
-                  'product'}) %>
+                  <%-include("../../partials/changeMulti.view.ejs", { statusList: statusList, url:
+                  'products', type: 'product' }) %>
                 </div>
               </div>
             </div>
