--- a/views/admin/pages/product/product.view.ejs
+++ b/views/admin/pages/product/product.view.ejs
@@ -67,8 +67,8 @@
             <div class="container-fluid p-2 p-md-2">
               <div class="row gap-md-0 gap-2">
                 <div class="col-lg-4 col-12">
-                  <%-include("../../partials/changeMulti.view.ejs", {url: 'products', type:
-                  'product'}) %>
+                  <%-include("../../partials/changeMulti.view.ejs", { statusList: statusList, url:
+                  'products', type: 'product' }) %>
                 </div>
                 <div class="col-lg-4 col-12">
                   <%-include("../../partials/sort.view.ejs", {sortOption: ['position-asc',
