--- a/public/admin/styles/partials/sider.css
+++ b/public/admin/styles/partials/sider.css
@@ -1,3 +1,7 @@
+:root {
+  --sidebar-width: 250px;
+}
+
 #sidebar-layout {
   position: sticky;
   top: 0;
@@ -20,11 +24,11 @@
   display: flex;
 }
 #sidebar-layout #sidebar-nav-box {
-  flex-basis: 225px;
+  flex-basis: var(--sidebar-width);
   flex-shrink: 0;
   transition: transform 0.15s ease-in-out;
   z-index: 1038;
-  transform: translateX(-225px);
+  transform: translateX(calc(0px - var(--sidebar-width)));
 }
 
 #sidebar-layout #sidebar-nav-box {
@@ -55,7 +59,7 @@
   }
   #sidebar-layout #sidebar-nav-box {
     width: 0px;
-    transform: translateX(-225px);
+    transform: translateX(calc(0px - var(--sidebar-width)));
   }
   #sidebar-layout #sidebar-nav-box.show {
     transform: translateX(0);
@@ -78,7 +82,7 @@
   }
 }
 #sidebar-layout #sidebar-nav-box {
-  width: 225px;
+  width: var(--sidebar-width);
   height: 100vh;
   z-index: 1038;
 }
