--- a/views/admin/pages/category/category.view.ejs
+++ b/views/admin/pages/category/category.view.ejs
@@ -59,13 +59,13 @@
             <div class="container-fluid p-2 p-md-2">
               <div class="row gap-lg-0 gap-2 justify-content-between">
                 <div class="col-lg-4 col-12">
-                  <%-include("../../partials/changeMulti.view.ejs", {url: 'categories', type:
-                  'category'}) %>
+                  <%-include("../../partials/changeMulti.view.ejs", { statusList: statusList, url:
+                  'product-categories', type: 'category' }) %>
                 </div>
                 <div class="col-lg-4 col-12">
                   <% if(roleAuth.permission.includes('category-add')) { %>
                   <a
-                    href="<%= prefixAdmin %>/categories/create"
+                    href="<%= prefixAdmin %>/product-categories/create"
                     class="btn btn-primary w-100 float-end"
                   >
                     <i class="bi bi-plus-lg me-1"></i>Thêm mới danh mục
@@ -157,7 +157,7 @@
                         <td>
                           <% if(roleAuth.permission.includes('category-update')) { %>
                           <a
-                            href="<%= prefixAdmin %>/categories/update/<%= item._id %>"
+                            href="<%= prefixAdmin %>/product-categories/update/<%= item._id %>"
                             data-id="<%= item._id %>"
                             class="btn btn-primary btn-sm mb-1 btn-update"
                           >
@@ -193,7 +193,7 @@
             </div>
             <div class="col-lg-3 col-md-3 col-12">
               <a
-                href="<%= prefixAdmin %>/categories/garbage"
+                href="<%= prefixAdmin %>/product-categories/garbage"
                 class="btn btn-primary w-100 float-end"
                 ><i class="bi bi-trash me-2"></i>Thùng rác</a
               >
@@ -207,13 +207,18 @@
     <%-include("../../partials/footer.view.ejs") %>
 
     <form
-      action="<%= prefixAdmin %>/categories"
+      action="<%= prefixAdmin %>/product-categories"
       method="POST"
       class="d-none"
       form-change-status
     ></form>
 
-    <form action="<%= prefixAdmin %>/categories" method="POST" class="d-none" form-delete></form>
+    <form
+      action="<%= prefixAdmin %>/product-categories"
+      method="POST"
+      class="d-none"
+      form-delete
+    ></form>
 
     <!-- Script File -->
     <script src="/admin/scripts/showAlert.js"></script>
