complete change status order feature for order list ui admin

--- a/views/admin/pages/order/order.view.ejs
+++ b/views/admin/pages/order/order.view.ejs
@@ -272,6 +272,7 @@
     <script src="/admin/scripts/product/priceFilter.js"></script>
     <script src="/admin/scripts/changeMulti.js"></script>
     <script src="/admin/scripts/pagination.js"></script>
+    <script src="/admin/scripts/order/changeStatusSelect.js"></script>
     <script src="/admin/scripts/activeSidebarLink.js"></script>
     <script src="/admin/scripts/toggleAccountInfo.js"></script>
 
